--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 						</div>
 					</div>
 
-				<!-- Footer -->
+				<!-- Footer
 					<footer id="footer">
 						<div class="inner">
 							<section>
@@ -231,7 +231,7 @@
 								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
-					</footer>
+					</footer> -->
 
 			</div>
 
