--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 								
 								<article class="style1">
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/mainImage/lpvr.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Lego Based Props for Virtual Reality</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>A toolkit which enables VR developers to build physical-manipulation enabled controllers of any shape and size.</p>
 										</div>
 									</a>
 								</article>
@@ -71,12 +71,12 @@
 
 								<article class="style2">
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/mainImage/mmm.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>MayMayMe</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>A platform for all meme needs- maker space where people can create memes using templates and basic editing tools, a feed to browse memes and a communications corner.</p>
 										</div>
 									</a>
 								</article>
@@ -84,23 +84,23 @@
 
 								<article class="style3">
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/mainImage/jamoora.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Jamoora</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>A robotic puppet capable of understanding voice and music.</p>
 										</div>
 									</a>
 								</article>
 								<article class="style4">
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/mainImage/fake.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Fake News Detection</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>A Mutli-Modal Fake News detection system.</p>
 										</div>
 									</a>
 								</article>
@@ -111,9 +111,9 @@
 									<a href="generic.html">
 										<h2>Efficient Traffic Management</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>A traffic management system for the city of Delhi using online APIs.</p>
 										</div>
-									</a>
+									</a> 
 								</article>
 								<article class="style6">
 									<span class="image">
@@ -122,7 +122,7 @@
 									<a href="generic.html">
 										<h2>Autovend</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>A smart fridge which uses RF tags and cameras to automatically bill its users.</p>
 										</div>
 									</a>
 								</article>
@@ -133,13 +133,13 @@
 									<a href="generic.html">
 										<h2>Braille Printer</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>A prototype of a brailler printer made using old CD/DVD drives.</p>
 										</div>
 									</a>
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images/misc.png" alt="" />
+										<img src="images/mainImage/misc.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Miscellaneous</h2>
