--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 								</article>
 								<article class="style5">
 									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
+										<img src="images/mainImage/traffic.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Efficient Traffic Management</h2>
@@ -117,7 +117,7 @@
 								</article>
 								<article class="style6">
 									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
+										<img src="images/mainImage/autovend.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Autovend</h2>
@@ -128,7 +128,7 @@
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images/pic07.jpg" alt="" />
+										<img src="images/mainImage/braille.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Braille Printer</h2>
