--- a/pages/jamoora.html
+++ b/pages/jamoora.html
@@ -43,7 +43,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Jamoora</h1>
-							<span class="image main"><img src="../images/Jamoora/main.jpg" alt="" /></span>
+							<span class="image main"><img src="../images/jamoora/main.jpg" alt="" /></span>
 							<p>‘Jamoora’- a robotic puppet which can be used to tell stories in an exciting and fun manner. Jamoora can perform predefined actions (using a voice recognition system) while displaying a wide range of emotions - happiness, sadness, fear, anger, etc. (using a music recognition system). Puppetry is an ancient art form that animates our ideas. It can include narration of a story and employ music to depict the mood. These elements introduce the freedom to create subtle ideas which would otherwise be hard to express. We want to enable the puppeteer to combine multiple forms of expression to perform an act which would otherwise take multiple performers to accomplish. Raabta (meaning connection) is a system which controls a Jamoora’s moods through music and it’s actions by keywords woven into a narration.</p>
 
 
@@ -51,7 +51,7 @@
 
 
 
-							 <p><span class="image left"><img src="../images/Jamoora/framework.jpg" alt="" /></span>The processing unit combines the motion trigger and the musical sentiment to make Jamoora go through a motion sequence with an appropriate body language. Figure on the left gives an example of the complete process of information flow for a sample scene. Many folktales involving the animation of animals and their emotions can be presented using such a mechanism.</>
+							 <p><span class="image left"><img src="../images/jamoora/framework.jpg" alt="" /></span>The processing unit combines the motion trigger and the musical sentiment to make Jamoora go through a motion sequence with an appropriate body language. Figure on the left gives an example of the complete process of information flow for a sample scene. Many folktales involving the animation of animals and their emotions can be presented using such a mechanism.</>
 
 							 	<p>Jamoora was one of the fifteen entries selected from all over the world to be showcased as part of the Student Innovation Contest at 31st ACM User Interface Software and Technology Symposium (UIST) held in Berlin, Germany and has been covered in many media outlets like The Indian Express.</br></br></br></p>
 
