--- a/pages/autovend.html
+++ b/pages/autovend.html
@@ -43,7 +43,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Autovend</h1>
-							<span class="image left"><img src="../images/Autovend/fridge.jpeg" alt="" /></span>
+							<span class="image left"><img src="../images/autovend/fridge.jpeg" alt="" /></span>
 							<p>Autovend is an automatic vending machine which aims to improve the customer experience while purchasing food items. To purchase a food item, a user just has to press a button in an app to unlock the fridge, he/she can just walk away with the food, and will be billed automatically.</p>
 							
 							 <p>Autovend has a two fold system to detect the objects being taken out. The first system is to detect the radio-frequency (RF) tags that are put on each food item. The second system is to detect which object is taken out using realtime object detection using two cameras. The result from the two system is combined to finally detect the food items that are taken out and the user is billed automatically.</p>
