--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						<div class="inner">
 							<header>
 								<h1>VarnitJain<br /></h1>
-								<p>Under Construction</p>
+								<p>I am a final year undergraduate student at Indraprastha Institute of Information Technology, Delhi. My primary research interest lies in toolkit design to make technology more accessible. My fields of research broadly include Human-Computer Interaction, Data Science and Internet of Things.</p>
 							</header>
 							<section class="tiles">
 								
