--- a/pages/jamoora.html
+++ b/pages/jamoora.html
@@ -53,7 +53,7 @@
 
 							 <p><span class="image left"><img src="../images/jamoora/framework.jpg" alt="" /></span>The processing unit combines the motion trigger and the musical sentiment to make Jamoora go through a motion sequence with an appropriate body language. Figure on the left gives an example of the complete process of information flow for a sample scene. Many folktales involving the animation of animals and their emotions can be presented using such a mechanism.</>
 
-							 	<p>Jamoora was one of the fifteen entries selected from all over the world to be showcased as part of the Student Innovation Contest at 31st ACM User Interface Software and Technology Symposium (UIST) held in Berlin, Germany and has been covered in many media outlets like The Indian Express.</br></br></br></p>
+							 	<strong><p>Jamoora was one of the fifteen entries selected from all over the world to be showcased as part of the Student Innovation Contest at 31st ACM User Interface Software and Technology Symposium (UIST) held in Berlin, Germany and has been covered in many media outlets like The Indian Express.</br></br></br></p></strong>
 
 							<p></p>
 
