--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 									<span class="image">
 										<img src="images/mainImage/mmm.jpg" alt="" />
 									</span>
-									<a href="pages/maymayme.html">
-										<h2>MayMayMe</h2>
+									<a href="pages/mime.html">
+										<h2>Mime</h2>
 										<div class="content">
 											<p>A platform for all meme needs- maker space where people can create memes using templates and basic editing tools, a feed to browse memes and a communications corner.</p>
 										</div>
