--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body bgcolor="#afafaf" data-spy="scroll" data-target="#navbarNav">
 
-	<section id="about"></section>
+	<!-- <section id="about"></section> -->
 
 	<nav class="navbar navbar-expand-lg navbar-light navbar-custom bg-white fixed-top">
 
@@ -43,85 +43,207 @@
 	</nav>
 
 
-	<div class="main">
+	<main class="main">
 
-		<section id="about"></section>
-
-		<div class="jumbotron">
+		
+		<div class="jumbotron" id="about">
 			<div class="container">
 				<!-- <h1 class="display-4">Hi</h1> -->
 				<h1>Hi</h1>
 				<p>I am a postgraduate at Georgia Institute of Technology, working in the field of Human–Computer Interaction.
-				My objective is to help
-				<span class="notice"><em>&nbsp;Simplify&nbsp; </em></span> 
-				<!-- <font color="#AC3B61" ><em>Simplify</em></font>  -->
-				technology so that 
-				<span class="notice">novice developers can learn quickly</span>
-				and
-				<span class="notice">a new wave of people get access to technology</span>
-				.</p>
+					My objective is to help
+					<span class="notice"><em>&nbsp;Simplify&nbsp; </em></span> 
+					<!-- <font color="#AC3B61" ><em>Simplify</em></font>  -->
+					technology so that 
+					<span class="notice">novice developers can learn quickly</span>
+					and
+					<span class="notice">a new wave of people get access to technology.</span>
+				</p>
 
-				<p><a href="#" id="arrow" class="parent">Read More&nbsp;&nbsp;&nbsp;
+				<p><a href="#" id="arrow" class="parent"><strong>Read More&nbsp;&nbsp;&nbsp;</strong>
 					<i class="fa">&#xf054;</i>
 				</a></p>
 			</div>
 		</div>
 
-		<div class="container">
-      
+		<div class="container" id="projects">
 
-      <div class="row mb-2">
-        <div class="col-md-6">
-          <div class="card flex-md-row mb-4 box-shadow h-md-250">
-            <div class="card-body d-flex flex-column align-items-start">
-              <!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
-              <h3 class="mb-0">
-                <a class="text-dark" href="#">Virtual Bricks</a>
-              </h3>
-              <div class="mb-1 text-muted">CHI 2019, Full Paper</div>
-              <img class="card-img-right flex-auto d-md-block" data-src="holder.js/200x250?theme=thumb" alt="Card image cap">
-              <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-              <a href="#">Continue Reading</a>
-            </div>
-            
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="card flex-md-row mb-4 box-shadow h-md-250">
-            <div class="card-body d-flex flex-column align-items-start">
-              <strong class="d-inline-block mb-2 text-success">Design</strong>
-              <h3 class="mb-0">
-                <a class="text-dark" href="#">Post title</a>
-              </h3>
-              <div class="mb-1 text-muted">Nov 11</div>
-              <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-              <a href="#">Continue reading</a>
-            </div>
-            <img class="card-img-right flex-auto d-none d-md-block" data-src="holder.js/200x250?theme=thumb" alt="Card image cap">
-          </div>
-        </div>
-      </div>
-    </div>
+			<div class="row mb-2">
+				<div class="col-md-6">
+					<div class="card flex-md-row mb-4 box-shadow h-md-250">
+						<div class="card-body d-flex flex-column align-items-start">
+							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
+							<h3 class="mb-0">
+								<a class="text-dark" href="#">Virtual Bricks</a>
+							</h3>
+							<div class="mb-1 text-muted">CHI 2019, Full Paper</div>
+							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="images/mime-icon.png"></div>
+							<p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+							<a href="#">Continue Reading</a>
+						</div>
+
+					</div>
+				</div>
+
+				<div class="col-md-6">
+					<div class="card flex-md-row mb-4 box-shadow h-md-250">
+						<div class="card-body d-flex flex-column align-items-start">
+							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
+							<h3 class="mb-0">
+								<a class="text-dark" href="#">Jamoora</a>
+							</h3>
+							<div class="mb-1 text-muted">UIST 2018, SIC</div>
+							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="images/mime-icon.png"></div>
+							<p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+							<a href="#">Continue Reading</a>
+						</div>
+
+					</div>
+				</div>
+
+			</div>
+
+			<div class="row mb-2">
+				<div class="col-md-6">
+					<div class="card flex-md-row mb-4 box-shadow h-md-250">
+						<div class="card-body d-flex flex-column align-items-start">
+							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
+							<h3 class="mb-0">
+								<a class="text-dark" href="#">Virtual Bricks</a>
+							</h3>
+							<div class="mb-1 text-muted">CHI 2019, Full Paper</div>
+							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="images/mime-icon.png"></div>
+							<p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+							<a href="#">Continue Reading</a>
+						</div>
+
+					</div>
+				</div>
+
+				<div class="col-md-6">
+					<div class="card flex-md-row mb-4 box-shadow h-md-250">
+						<div class="card-body d-flex flex-column align-items-start">
+							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
+							<h3 class="mb-0">
+								<a class="text-dark" href="#">Jamoora</a>
+							</h3>
+							<div class="mb-1 text-muted">UIST 2018, SIC</div>
+							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="images/mime-icon.png"></div>
+							<p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+							<a href="#">Continue Reading</a>
+						</div>
+
+					</div>
+				</div>
+
+			</div>
+
+			<div class="row mb-2">
+				<div class="col-md-6">
+					<div class="card flex-md-row mb-4 box-shadow h-md-250">
+						<div class="card-body d-flex flex-column align-items-start">
+							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
+							<h3 class="mb-0">
+								<a class="text-dark" href="#">Virtual Bricks</a>
+							</h3>
+							<div class="mb-1 text-muted">CHI 2019, Full Paper</div>
+							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="images/mime-icon.png"></div>
+							<p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+							<a href="#">Continue Reading</a>
+						</div>
+
+					</div>
+				</div>
+
+				<div class="col-md-6">
+					<div class="card flex-md-row mb-4 box-shadow h-md-250">
+						<div class="card-body d-flex flex-column align-items-start">
+							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
+							<h3 class="mb-0">
+								<a class="text-dark" href="#">Jamoora</a>
+							</h3>
+							<div class="mb-1 text-muted">UIST 2018, SIC</div>
+							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="images/mime-icon.png"></div>
+							<p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+							<a href="#">Continue Reading</a>
+						</div>
+
+					</div>
+				</div>
+
+			</div>
+
+			<div class="row mb-2">
+				<div class="col-md-6">
+					<div class="card flex-md-row mb-4 box-shadow h-md-250">
+						<div class="card-body d-flex flex-column align-items-start">
+							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
+							<h3 class="mb-0">
+								<a class="text-dark" href="#">Virtual Bricks</a>
+							</h3>
+							<div class="mb-1 text-muted">CHI 2019, Full Paper</div>
+							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="images/mime-icon.png"></div>
+							<p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+							<a href="#">Continue Reading</a>
+						</div>
+
+					</div>
+				</div>
+
+				<div class="col-md-6">
+					<div class="card flex-md-row mb-4 box-shadow h-md-250">
+						<div class="card-body d-flex flex-column align-items-start">
+							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
+							<h3 class="mb-0">
+								<a class="text-dark" href="#">Jamoora</a>
+							</h3>
+							<div class="mb-1 text-muted">UIST 2018, SIC</div>
+							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="images/mime-icon.png"></div>
+							<p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+							<a href="#">Continue Reading</a>
+						</div>
+
+					</div>
+				</div>
+
+			</div>
+		</div>
+
+
+	</main>
+
+
+	<!-- <hr width="90%"/> -->
+
+	<footer class="footer-basic-centered foot-shadow" id="contact">
+
+			<p class="footer-company-motto">The company motto.</p>
+
+			<p class="footer-links">
+				<a href="#">Home</a>
+				·
+				<a href="#">Blog</a>
+				·
+				<a href="#">Pricing</a>
+				·
+				<a href="#">About</a>
+				·
+				<a href="#">Faq</a>
+				·
+				<a href="#">Contact</a>
+			</p>
+
+			<p class="footer-company-name">Company Name &copy; 2015</p>
+
+		</footer>
+
+	<!-- 	<div class="container" id="contact">
+			
 
 
 
-
-
-
-
-		<section id="#" bgcolor="#555">
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et molestie lorem. Nulla luctus, lectus et pharetra euismod, purus enim convallis nibh, eu porttitor sapien metus vel purus. Integer cursus hendrerit tristique. Ut a ornare justo. Nulla in gravida dolor. Sed aliquam imperdiet sem, eget consequat nulla porta vel. Duis id aliquam ex. Vestibulum sit amet pretium tortor. Sed pellentesque nulla nec turpis dictum mattis. Nunc augue nulla, luctus non imperdiet ut, tincidunt fermentum arcu. Maecenas nulla lorem, pretium nec hendrerit ultrices, sodales sed arcu. Pellentesque vestibulum orci sem, sit amet commodo tortor maximus sit amet. Proin eget leo ut nisl porta tincidunt. Curabitur tristique sem urna, vitae faucibus risus blandit et. Nulla facilisi.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et molestie lorem. Nulla luctus, lectus et pharetra euismod, purus enim convallis nibh, eu porttitor sapien metus vel purus. Integer cursus hendrerit tristique. Ut a ornare justo. Nulla in gravida dolor. Sed aliquam imperdiet sem, eget consequat nulla porta vel. Duis id aliquam ex. Vestibulum sit amet pretium tortor. Sed pellentesque nulla nec turpis dictum mattis. Nunc augue nulla, luctus non imperdiet ut, tincidunt fermentum arcu. Maecenas nulla lorem, pretium nec hendrerit ultrices, sodales sed arcu. Pellentesque vestibulum orci sem, sit amet commodo tortor maximus sit amet. Proin eget leo ut nisl porta tincidunt. Curabitur tristique sem urna, vitae faucibus risus blandit et. Nulla facilisi.</p>
-		</section>
-
-		<section id="projects">
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et molestie lorem. Nulla luctus, lectus et pharetra euismod, purus enim convallis nibh, eu porttitor sapien metus vel purus. Integer cursus hendrerit tristique. Ut a ornare justo. Nulla in gravida dolor. Sed aliquam imperdiet sem, eget consequat nulla porta vel. Duis id aliquam ex. Vestibulum sit amet pretium tortor. Sed pellentesque nulla nec turpis dictum mattis. Nunc augue nulla, luctus non imperdiet ut, tincidunt fermentum arcu. Maecenas nulla lorem, pretium nec hendrerit ultrices, sodales sed arcu. Pellentesque vestibulum orci sem, sit amet commodo tortor maximus sit amet. Proin eget leo ut nisl porta tincidunt. Curabitur tristique sem urna, vitae faucibus risus blandit et. Nulla facilisi.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et molestie lorem. Nulla luctus, lectus et pharetra euismod, purus enim convallis nibh, eu porttitor sapien metus vel purus. Integer cursus hendrerit tristique. Ut a ornare justo. Nulla in gravida dolor. Sed aliquam imperdiet sem, eget consequat nulla porta vel. Duis id aliquam ex. Vestibulum sit amet pretium tortor. Sed pellentesque nulla nec turpis dictum mattis. Nunc augue nulla, luctus non imperdiet ut, tincidunt fermentum arcu. Maecenas nulla lorem, pretium nec hendrerit ultrices, sodales sed arcu. Pellentesque vestibulum orci sem, sit amet commodo tortor maximus sit amet. Proin eget leo ut nisl porta tincidunt. Curabitur tristique sem urna, vitae faucibus risus blandit et. Nulla facilisi.</p>
-		</section>
-
-		<section id="contact">
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et molestie lorem. Nulla luctus, lectus et pharetra euismod, purus enim convallis nibh, eu porttitor sapien metus vel purus. Integer cursus hendrerit tristique. Ut a ornare justo. Nulla in gravida dolor. Sed aliquam imperdiet sem, eget consequat nulla porta vel. Duis id aliquam ex. Vestibulum sit amet pretium tortor. Sed pellentesque nulla nec turpis dictum mattis. Nunc augue nulla, luctus non imperdiet ut, tincidunt fermentum arcu. Maecenas nulla lorem, pretium nec hendrerit ultrices, sodales sed arcu. Pellentesque vestibulum orci sem, sit amet commodo tortor maximus sit amet. Proin eget leo ut nisl porta tincidunt. Curabitur tristique sem urna, vitae faucibus risus blandit et. Nulla facilisi.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et molestie lorem. Nulla luctus, lectus et pharetra euismod, purus enim convallis nibh, eu porttitor sapien metus vel purus. Integer cursus hendrerit tristique. Ut a ornare justo. Nulla in gravida dolor. Sed aliquam imperdiet sem, eget consequat nulla porta vel. Duis id aliquam ex. Vestibulum sit amet pretium tortor. Sed pellentesque nulla nec turpis dictum mattis. Nunc augue nulla, luctus non imperdiet ut, tincidunt fermentum arcu. Maecenas nulla lorem, pretium nec hendrerit ultrices, sodales sed arcu. Pellentesque vestibulum orci sem, sit amet commodo tortor maximus sit amet. Proin eget leo ut nisl porta tincidunt. Curabitur tristique sem urna, vitae faucibus risus blandit et. Nulla facilisi.</p>
-		</section>
-
-	</div>
+		</div>
+ -->
 
 
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
