--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 	<main class="main">
 
-		
+
 		<div class="jumbotron" id="about">
 			<div class="container">
 				<!-- <h1 class="display-4">Hi</h1> -->
@@ -77,7 +77,7 @@
 								<a class="text-dark" href="#">Virtual Bricks</a>
 							</h3>
 							<div class="mb-1 text-muted">CHI 2019, Full Paper</div>
-							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="images/mime-icon.png"></div>
+							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="images/mime-icon-min.png"></div>
 							<p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
 							<a href="#">Continue Reading</a>
 						</div>
@@ -93,7 +93,7 @@
 								<a class="text-dark" href="#">Jamoora</a>
 							</h3>
 							<div class="mb-1 text-muted">UIST 2018, SIC</div>
-							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="images/mime-icon.png"></div>
+							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="images/mime-icon-min.png"></div>
 							<p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
 							<a href="#">Continue Reading</a>
 						</div>
