--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 		<div class="collapse navbar-collapse flex-grow-1 text-right " id="navbarNav">
 			<ul class="nav navbar-nav ml-auto flex-nowra">
-				<li class="nav-item"><a class="nav-link px-3 cool-link" href="#about">ABOUT</a></li>
+				<li class="nav-item"><a class="nav-link px-3 cool-link" href="#about" id="aboutColor">ABOUT</a></li>
 				<li class="nav-item"><a class="nav-link px-3  cool-link" href="#projects">PROJECTS</a></li>
 				<li class="nav-item"><a class="nav-link px-3  cool-link" href="#contact">CONTACT</a></li>
 				<li class="nav-item"><a class="nav-link px-3  cool-link" href="#blog">BLOG</a></li>
@@ -45,8 +45,10 @@
 
 	<main class="main">
 
+		<section id="about"></section>
 
-		<div class="jumbotron" id="about">
+
+		<div class="jumbotron">
 			<div class="container">
 				<!-- <h1 class="display-4">Hi</h1> -->
 				<h1>Hi</h1>
@@ -60,13 +62,19 @@
 					<span class="notice">a new wave of people get access to technology.</span>
 				</p>
 
+				<section id="projects"></section>
+
 				<p><a href="#" id="arrow" class="parent"><strong>Read More&nbsp;&nbsp;&nbsp;</strong>
 					<i class="fa">&#xf054;</i>
+
 				</a></p>
 			</div>
+
 		</div>
 
-		<div class="container" id="projects">
+		<!-- <section id="projects"></section> -->
+
+		<div class="container">
 
 			<div class="row mb-2">
 				<div class="col-md-6">
