--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 						<div class="card-body d-flex flex-column align-items-start">
 							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
 							<h3 class="mb-0">
-								<a class="text-dark" href="#">Virtual Bricks</a>
+								<a class="text-dark" href="#">Mime</a>
 							</h3>
 							<div class="mb-1 text-muted">CHI 2019, Full Paper</div>
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="images/mime-icon.png"></div>
