--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<li class="nav-item"><a class="nav-link px-3 cool-link" href="#about" id="aboutColor">ABOUT</a></li>
 				<li class="nav-item"><a class="nav-link px-3  cool-link" href="#projects">PROJECTS</a></li>
 				<li class="nav-item"><a class="nav-link px-3  cool-link" href="#contact">CONTACT</a></li>
-				<li class="nav-item"><a class="nav-link px-3  cool-link" href="#blog">BLOG</a></li>
+				<li class="nav-item"><a class="nav-link px-3  cool-link" href="pages/blog.html">BLOGs</a></li>
 			</ul>
 		</div>
 
@@ -133,7 +133,7 @@
 						<div class="card-body d-flex flex-column align-items-start">
 							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
 							<h3 class="mb-0">
-								<a class="text-dark" href="#">Jamoora</a>
+								<a class="text-dark" href="#">Effective Traffic Management</a>
 							</h3>
 							<div class="mb-1 text-muted">UIST 2018, SIC</div>
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="images/mime-icon.png"></div>
@@ -152,7 +152,7 @@
 						<div class="card-body d-flex flex-column align-items-start">
 							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
 							<h3 class="mb-0">
-								<a class="text-dark" href="#">Virtual Bricks</a>
+								<a class="text-dark" href="#">Fake News</a>
 							</h3>
 							<div class="mb-1 text-muted">CHI 2019, Full Paper</div>
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="images/mime-icon.png"></div>
@@ -168,7 +168,7 @@
 						<div class="card-body d-flex flex-column align-items-start">
 							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
 							<h3 class="mb-0">
-								<a class="text-dark" href="#">Jamoora</a>
+								<a class="text-dark" href="#">Beatdrop</a>
 							</h3>
 							<div class="mb-1 text-muted">UIST 2018, SIC</div>
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="images/mime-icon.png"></div>
@@ -187,7 +187,7 @@
 						<div class="card-body d-flex flex-column align-items-start">
 							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
 							<h3 class="mb-0">
-								<a class="text-dark" href="#">Virtual Bricks</a>
+								<a class="text-dark" href="#">Autovend</a>
 							</h3>
 							<div class="mb-1 text-muted">CHI 2019, Full Paper</div>
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="images/mime-icon.png"></div>
@@ -203,7 +203,7 @@
 						<div class="card-body d-flex flex-column align-items-start">
 							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
 							<h3 class="mb-0">
-								<a class="text-dark" href="#">Jamoora</a>
+								<a class="text-dark" href="#">Braille Printer</a>
 							</h3>
 							<div class="mb-1 text-muted">UIST 2018, SIC</div>
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="images/mime-icon.png"></div>
@@ -225,25 +225,62 @@
 
 	<footer class="footer-basic-centered foot-shadow" id="contact">
 
-			<p class="footer-company-motto">The company motto.</p>
+		<p class="footer-company-motto">Contact</p>
 
-			<p class="footer-links">
-				<a href="#">Home</a>
-				·
-				<a href="#">Blog</a>
-				·
-				<a href="#">Pricing</a>
-				·
-				<a href="#">About</a>
-				·
-				<a href="#">Faq</a>
-				·
-				<a href="#">Contact</a>
-			</p>
+		<style type="text/css">
+			.card1 {
+				width: 130px;
+				height: 195px;
+				position: relative;
+				display: inline-block;
+				margin: 50px;
+			}
+			.card1 .img-top {
+				display: none;
+				position: absolute;
+				top: 0;
+				left: 0;
+				z-index: 99;
+			}
+			.card1:hover .img-top {
+				display: inline;
+			}
+		</style>
 
-			<p class="footer-company-name">Company Name &copy; 2015</p>
 
-		</footer>
+		<div class="container footer-icons">
+			<img src="icons/mail-grey.png" alt="Avatar" class="image-footer">
+			<img src="icons/linkedin-grey.png" alt="Avatar" class="image-footer">
+			<img src="icons/github-grey.png" alt="Avatar" class="image-footer">
+			<img src="icons/rg-grey.png" alt="Avatar" class="image-footer">
+			<img src="icons/instagram-grey.png" alt="Avatar" class="image-footer">
+<!-- 
+			<a id="home" class="container footer-icons">
+				<img class="image_on image-footer" src="icons/instagram-grey.png" alt="logo" />
+				<img class="image_off image-footer" src="icons/instagram-red.png" alt="logo" />
+			</a> -->
+
+
+		</div>
+
+
+<!-- 
+
+		<p class="footer-links">
+			<a href="#">Home</a>
+			·
+			<a href="#">Blog</a>
+			·
+			<a href="#">Pricing</a>
+			·
+			<a href="#">About</a>
+			·
+			<a href="#">Faq</a>
+			·
+			<a href="#">Contact</a>
+		</p> -->
+
+	</footer>
 
 	<!-- 	<div class="container" id="contact">
 			
@@ -251,7 +288,7 @@
 
 
 		</div>
- -->
+	-->
 
 
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
